move sdks intor head tag and remove unnecessary <> characters from crendentials

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -9,7 +9,7 @@
 
   braintree.dropin.create({
     // Insert your tokenization key here
-    authorization: '<sandbox_4xmsvbmq_nzndht9r7bk4758v>',
+    authorization: 'sandbox_4xmsvbmq_nzndht9r7bk4758v',
     container: '#dropin-container'
   }, function (createErr, instance) {
     button.addEventListener('click', function () {
